# Exadata-Resource-Intelligence-Collector-App

./: .gitignore  AGENTS.md  README.md  app.py  dash_app.py  inventory.py  logging_setup.py  main.py  pyproject.toml  requirements.txt  ssh_runner.py
assets/: app.css
collectors/: __init__.py  asm_diskgroups.py  asm_diskgroups_collector.py  cell_inventory_collector.py  db_capacity_collector.py  db_inventory_collector.py  db_patch_collector.py  db_performance_collector.py  db_workload_collector.py  hugepages_collector.py  os_collector.py  shared_context.py  version_inventory_collector.py
components/: __init__.py  cards.py  charts.py  filters.py  layout.py  tables.py
config/: clusters.example.yaml  clusters.yaml
pages/: __init__.py  asm.py  cell_inventory.py  db_cpu.py  db_inventory.py  db_iops.py  db_memory.py  db_memory_cluster.py  db_throughput.py  executive.py  filesystem.py  hugepages.py  inventory.py  os_cpu.py  os_memory.py  pdb_inventory.py  raw_data.py
reports/: __init__.py  writers.py
scripts/: __init__.py  run_cell_inventory.py
services/: __init__.py  analytics.py  data_loader.py  history.py  normalizers.py
tests/: test_app_memory_analytics.py  test_app_navigation_reorg.py  test_app_performance_analytics.py  test_asm_cleanup_outputs.py  test_asm_diskgroups_collector.py  test_asm_import_syntax.py  test_asm_shell_syntax.py  test_asm_usable_and_filesystem.py  test_auth.py  test_cell_inventory_collector.py  test_cli_asm_output.py  test_config.py  test_dash_data_loader.py  test_dash_new_normalizers.py  test_dash_normalizers.py  test_db_patch_collector.py  (+17 more)
(+19 files in other folders)
