[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "exadata-resource-intelligence-collector"
version = "0.1.0"
description = "Exadata infrastructure intelligence and capacity collector"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0.1,<7.0.0"]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
exadata-ric = "main:main"

[tool.setuptools]
py-modules = ["inventory", "logging_setup", "main", "ssh_runner"]

[tool.setuptools.packages.find]
where = ["."]
include = ["collectors*", "reports*"]
exclude = ["tests*", "src*"]
